Bug 378594  Closing takes very long after deleting a livemark (places) (r=sspitzer)